AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4
lib_LTLIBRARIES = libx13hash.la
libx13hash_la_LDFLAGS = -no-undefined
libx13hash_la_SOURCES = \
	x13.c x13.h \
	sha3/aes_helper.c sha3/blake.c sha3/bmw.c sha3/cubehash.c sha3/echo.c sha3/fugue.c sha3/groestl.c \
	sha3/hamsi_helper.c sha3/hamsi.c sha3/jh.c sha3/keccak.c sha3/luffa.c sha3/shavite.c sha3/simd.c sha3/skein.c sha3/sph_blake.h \
	sha3/sph_bmw.h sha3/sph_cubehash.h sha3/sph_echo.h sha3/sph_fugue.h sha3/ssph_groestl.h sha3/sph_hamsi.h sha3/sph_jh.h \
	sha3/sph_keccak.h sha3/sph_luffa.h sha3/sph_shavite.h sha3/sph_simd.h sha3/sph_skein.h sha3/sph_types.h